Alignments Fixes, Sections Rearranged,Font NeedFix

--- a/public/css/tailwind/tailwind.css
+++ b/public/css/tailwind/tailwind.css
@@ -608,6 +608,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 1.5rem;
 }
 
+.my-40 {
+  margin-top: 10rem;
+  margin-bottom: 10rem;
+}
+
 .mr-12 {
   margin-right: 3rem;
 }
@@ -678,6 +683,22 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .mr-4 {
   margin-right: 1rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
+.ml-4 {
+  margin-left: 1rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.ml-6 {
+  margin-left: 1.5rem;
 }
 
 .mb-14 {
@@ -776,8 +797,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: auto;
 }
 
-.w-10\/12 {
-  width: 83.333333%;
+.w-40 {
+  width: 10rem;
 }
 
 .w-11\/12 {
@@ -816,6 +837,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .flex-shrink {
   flex-shrink: 1;
+}
+
+.flex-shrink-0 {
+  flex-shrink: 0;
 }
 
 .flex-grow {
@@ -860,10 +885,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .gap-4 {
   gap: 1rem;
-}
-
-.gap-24 {
-  gap: 6rem;
 }
 
 .gap-y-8 {
@@ -1224,6 +1245,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   text-align: center;
 }
 
+.text-right {
+  text-align: right;
+}
+
 .font-body {
   font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
@@ -1363,19 +1388,29 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: transparent;
 }
 
-.text-darkCoolGray-300 {
-  --tw-text-opacity: 1;
-  color: rgb(176 181 189 / var(--tw-text-opacity));
-}
-
 .text-gray-300 {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
+.text-darkCoolGray-300 {
+  --tw-text-opacity: 1;
+  color: rgb(176 181 189 / var(--tw-text-opacity));
+}
+
 .text-indigo-600 {
   --tw-text-opacity: 1;
   color: rgb(95 73 230 / var(--tw-text-opacity));
+}
+
+.text-indigo-500 {
+  --tw-text-opacity: 1;
+  color: rgb(105 81 255 / var(--tw-text-opacity));
+}
+
+.text-indigo-200 {
+  --tw-text-opacity: 1;
+  color: rgb(218 212 255 / var(--tw-text-opacity));
 }
 
 .text-coolGray-700 {
@@ -1408,6 +1443,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .drop-shadow-lg {
   --tw-drop-shadow: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.transition {
+  transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
 html {
@@ -2560,6 +2603,16 @@ small {
   src: url("/fonts/minecraft.ttf");
 }
 
+.flip-horizontal {
+  --transform-scale-x: -1;
+}
+
+/* Flip on the Y axis */
+
+.flip-vertical {
+  --transform-scale-y: -1;
+}
+
 .hover\:border-indigo-200:hover {
   --tw-border-opacity: 1;
   border-color: rgb(218 212 255 / var(--tw-border-opacity));
@@ -2689,6 +2742,10 @@ small {
 }
 
 @media (min-width: 768px) {
+  .md\:order-2 {
+    order: 2;
+  }
+
   .md\:m-0 {
     margin: 0px;
   }
@@ -2696,11 +2753,6 @@ small {
   .md\:mx-2 {
     margin-left: 0.5rem;
     margin-right: 0.5rem;
-  }
-
-  .md\:mx-10 {
-    margin-left: 2.5rem;
-    margin-right: 2.5rem;
   }
 
   .md\:mb-0 {
@@ -2835,6 +2887,10 @@ small {
     padding-left: 2.5rem;
   }
 
+  .md\:text-right {
+    text-align: right;
+  }
+
   .md\:text-xl {
     font-size: 1.25rem;
   }
@@ -2941,13 +2997,4 @@ small {
     padding-top: 2.5rem;
     padding-bottom: 2.5rem;
   }
-}
-
-.flip-horizontal {
-  --transform-scale-x: -1;
-}
-
-/* Flip on the Y axis */
-.flip-vertical {
-  --transform-scale-y: -1;
 }
